Style fix to stretch the input boxes to full width in the edit modal

--- a/AbstractCreator/css/global.css
+++ b/AbstractCreator/css/global.css
@@ -62,3 +62,9 @@ footer {
 	cursor: pointer;
 }
 /* }}} */
+/* Widget: Edit-Section {{{ */
+#edit-section input {
+	width: 97%;
+	margin-bottom: 0;
+}
+/* }}} */
